--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         -->
 
         <!-- CSS Stylesheet -->
-        <link rel="stylesheet" href="css/styles.css"> 
+        <link rel="stylesheet" href="css/styles.css">
+
+        <!-- Fonts from Google -->
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     </head>
 
     <body>
